<!--
  ~ Copyright 2015 MbientLab Inc. All rights reserved.
  ~
  ~ IMPORTANT: Your use of this Software is limited to those specific rights
  ~ granted under the terms of a software license agreement between the user who
  ~ downloaded the software, his/her employer (which must be your employer) and
  ~ MbientLab Inc, (the "License").  You may not use this Software unless you
  ~ agree to abide by the terms of the License which can be found at
  ~ www.mbientlab.com/terms . The License limits your use, and you acknowledge,
  ~ that the  Software may not be modified, copied or distributed and can be used
  ~ solely and exclusively in conjunction with a MbientLab Inc, product.  Other
  ~ than for the foregoing purpose, you may not use, reproduce, copy, prepare
  ~ derivative works of, modify, distribute, perform, display or sell this
  ~ Software and/or its documentation for any purpose.
  ~
  ~ YOU FURTHER ACKNOWLEDGE AND AGREE THAT THE SOFTWARE AND DOCUMENTATION ARE
  ~ PROVIDED "AS IS" WITHOUT WARRANTY OF ANY KIND, EITHER EXPRESS OR IMPLIED,
  ~ INCLUDING WITHOUT LIMITATION, ANY WARRANTY OF MERCHANTABILITY, TITLE,
  ~ NON-INFRINGEMENT AND FITNESS FOR A PARTICULAR PURPOSE. IN NO EVENT SHALL
  ~ MBIENTLAB OR ITS LICENSORS BE LIABLE OR OBLIGATED UNDER CONTRACT, NEGLIGENCE,
  ~ STRICT LIABILITY, CONTRIBUTION, BREACH OF WARRANTY, OR OTHER LEGAL EQUITABLE
  ~ THEORY ANY DIRECT OR INDIRECT DAMAGES OR EXPENSES INCLUDING BUT NOT LIMITED
  ~ TO ANY INCIDENTAL, SPECIAL, INDIRECT, PUNITIVE OR CONSEQUENTIAL DAMAGES, LOST
  ~ PROFITS OR LOST DATA, COST OF PROCUREMENT OF SUBSTITUTE GOODS, TECHNOLOGY,
  ~ SERVICES, OR ANY CLAIMS BY THIRD PARTIES (INCLUDING BUT NOT LIMITED TO ANY
  ~ DEFENSE THEREOF), OR OTHER SIMILAR COSTS.
  ~
  ~ Should you have any questions regarding your right to use this Software,
  ~ contact MbientLab Inc, at www.mbientlab.com.
  -->

<resources>
    <string name="app_name">MbientLab IMU Streamer</string>
    <string name="title_connecting">Connecting</string>
    <string name="title_reconnect_attempt">Reconnecting</string>
    <string name="message_wait">Please wait</string>
    <string name="action_disconnect">Disconnect</string>
    <string name="tableHeader1">key 1</string>
    <string name="tableHeader2">key 2</string>
    <string name="tableHeader3">key 3</string>
    <string name="tableHeader4">key 4</string>
    <string name="tableVal1">val 1</string>
    <string name="tableVal2">val 2</string>
    <string name="tableVal3">val 3</string>
    <string name="tableVal4">val 4</string>
    <string name="led_switch">LED</string>
    <string name="network_setup">Network Setup</string>
    <string name="ip_field_hint">IP address</string>
    <string name="port_field_hint">Port</string>
    <string name="stream_switch">UDP Streaming</string>
    <string name="sensordata_text">Sensor Fusion Data</string>
    <string name="sensorfusion_switch">Sensor Fusion Sampling</string>
    <string name="radio_label_mode_selection">Data Format</string>
    <string name="radiobutton1">Euler Angles</string>
    <string name="radiobutton2">Quaternions</string>
</resources>
