<!--
  ~ Copyright 2015 MbientLab Inc. All rights reserved.
  ~
  ~ IMPORTANT: Your use of this Software is limited to those specific rights
  ~ granted under the terms of a software license agreement between the user who
  ~ downloaded the software, his/her employer (which must be your employer) and
  ~ MbientLab Inc, (the "License").  You may not use this Software unless you
  ~ agree to abide by the terms of the License which can be found at
  ~ www.mbientlab.com/terms . The License limits your use, and you acknowledge,
  ~ that the  Software may not be modified, copied or distributed and can be used
  ~ solely and exclusively in conjunction with a MbientLab Inc, product.  Other
  ~ than for the foregoing purpose, you may not use, reproduce, copy, prepare
  ~ derivative works of, modify, distribute, perform, display or sell this
  ~ Software and/or its documentation for any purpose.
  ~
  ~ YOU FURTHER ACKNOWLEDGE AND AGREE THAT THE SOFTWARE AND DOCUMENTATION ARE
  ~ PROVIDED "AS IS" WITHOUT WARRANTY OF ANY KIND, EITHER EXPRESS OR IMPLIED,
  ~ INCLUDING WITHOUT LIMITATION, ANY WARRANTY OF MERCHANTABILITY, TITLE,
  ~ NON-INFRINGEMENT AND FITNESS FOR A PARTICULAR PURPOSE. IN NO EVENT SHALL
  ~ MBIENTLAB OR ITS LICENSORS BE LIABLE OR OBLIGATED UNDER CONTRACT, NEGLIGENCE,
  ~ STRICT LIABILITY, CONTRIBUTION, BREACH OF WARRANTY, OR OTHER LEGAL EQUITABLE
  ~ THEORY ANY DIRECT OR INDIRECT DAMAGES OR EXPENSES INCLUDING BUT NOT LIMITED
  ~ TO ANY INCIDENTAL, SPECIAL, INDIRECT, PUNITIVE OR CONSEQUENTIAL DAMAGES, LOST
  ~ PROFITS OR LOST DATA, COST OF PROCUREMENT OF SUBSTITUTE GOODS, TECHNOLOGY,
  ~ SERVICES, OR ANY CLAIMS BY THIRD PARTIES (INCLUDING BUT NOT LIMITED TO ANY
  ~ DEFENSE THEREOF), OR OTHER SIMILAR COSTS.
  ~
  ~ Should you have any questions regarding your right to use this Software,
  ~ contact MbientLab Inc, at www.mbientlab.com.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.mbientlab.metawear.tutorial.starter.DeviceSetupActivityFragment"
    tools:showIn="@layout/activity_device_setup">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Switch
            android:id="@+id/led_ctrl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/led_switch" />

        <View
            android:id="@+id/seperator"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:background="#c0c0c0" />

        <TextView
            android:id="@+id/setupText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/network_setup"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <LinearLayout
            android:id="@+id/IPPortLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/IPInputLayout"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_width="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/ip_address"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:digits="0123456789."
                    android:hint="@string/ip_field_hint"
                    android:inputType="number|numberDecimal" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/PortInputLayout"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_width="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/port"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789."
                    android:hint="@string/port_field_hint"
                    android:inputType="number|numberDecimal" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <Switch
            android:id="@+id/stream_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stream_switch" />

        <Button
            android:id="@+id/connect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Connect"/>

        <TextView
            android:id="@+id/state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="un-initiated"
            android:textSize="20dp"/>

        <TextView
            android:id="@+id/received"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"/>

        <View
            android:id="@+id/separator2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:background="#c0c0c0" />

        <TextView
            android:id="@+id/sensordataText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sensordata_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*">


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tableHeader1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tableHeader1" />

                <TextView
                    android:id="@+id/tableHeader2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tableHeader2" />

                <TextView
                    android:id="@+id/tableHeader3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/tableHeader3" />

                <TextView
                    android:id="@+id/tableHeader4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tableHeader4" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tableVal1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tableVal1" />

                <TextView
                    android:id="@+id/tableVal2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tableVal2" />

                <TextView
                    android:id="@+id/tableVal3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tableVal3" />

                <TextView
                    android:id="@+id/tableVal4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tableVal4" />
            </TableRow>

        </TableLayout>

        <Button
            android:id="@+id/button_change_vals"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Change Vals" />

        <RadioGroup
            android:id="@+id/fusionModeSelectionGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/radio_label_mode_selection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/radio_label_mode_selection" />

            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/radiobutton1" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/radiobutton2" />
        </RadioGroup>

        <Switch
            android:id="@+id/sensorFusionSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sensorfusion_switch" />

    </LinearLayout>

</RelativeLayout>
